--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
+  # branch: master # Branch to update (optional; defaults to master)
+  branch: main
 
 # Uncomment below to enable drafts
 # publish_mode: editorial_workflow
