--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -6,7 +6,7 @@ backend:
 # Uncomment below to enable drafts
 # publish_mode: editorial_workflow
 
-media_folder: "src/assets/img" # Media files will be stored in the repo under images/uploads
+media_folder: "assets/img" # Media files will be stored in the repo under images/uploads
 
 collections:
   # Articles
